<resources>
    <string name="app_name">TicTacToe</string>
    <string name="player_2_name">Player 2 name</string>
    <string name="player_1_name">Player 1 name</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="start_game_text">Start game</string>
    <string name="cross_icon_img_description">cross icon</string>
    <string name="zero_icon_img_description">zero icon</string>
    <string name="space">" "</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="new_match">New match</string>
    <string name="best_3_players">BEST 3 PLAYERS</string>
    <string name="second_place">Second place</string>
    <string name="first_place">First place</string>
    <string name="third_place">Third place</string>
</resources>
