<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/best3_1st"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/first_place"
            app:srcCompat="@drawable/place_1st"/>

        <TextView
            android:id="@+id/best3_player1_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="Player"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/best3_player1_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="35dp"
            android:text="8"
            android:textSize="40sp"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/best3_2nd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/second_place"
            app:srcCompat="@drawable/place_2nd"/>

        <TextView
            android:id="@+id/best3_player2_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="Player"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/best3_player2_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="35dp"
            android:text="8"
            android:textSize="40sp"/>

    </RelativeLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/best3_3rd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/third_place"
        app:srcCompat="@drawable/place_3rd"/>

    <TextView
        android:id="@+id/best3_player3_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="Player"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/best3_player3_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="35dp"
        android:text="8"
        android:textSize="40sp"/>

</RelativeLayout>

</LinearLayout>